--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br />
+    <p> 
+    <h1>We are here to create a perfect memory for you </h1>
+    </p>
+    <br />
+    <br />
+    <img src="images/pagprincipala.png" alt="Sample Photo" border-radius = "20px" ; width="900px" />
+   
 </div>
