Incercare pagina Evenimente

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -26,11 +26,14 @@
           </a>
         </li>*@
        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
+              <a class="nav-link text-dark" asp-area="" asp-page="/Index">Acasa</a>
+        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Evenimente">Evenimente</a>
                         </li>
+        <li class="nav-item">
+              <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+        </li>
         @*<li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu">
