Pag locatie si nu merge aia cu pozele

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -34,16 +34,20 @@
         <li class="nav-item">
               <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
         </li>
-        @*<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Servicii</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+                           <a class="dropdown-item" asp-area="" asp-page="/Locatii/Index">Locatii</a>
+            <a class="dropdown-item" href="#">Mancare</a>
+            <a class="dropdown-item" href="#">Bautura</a>
+            <a class="dropdown-item" href="#">Muzica</a>
+            <a class="dropdown-item" href="#">Foto/video</a>
+            <a class="dropdown-item" href="#">Aranjamente</a>
+
+           @* <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Separated link</a>*@
           </div>
-        </li>*@
+        </li>
       </ul>
       @*<form class="d-flex">
         <input class="form-control me-sm-2" type="search" placeholder="Search">
